# airflow-instance

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
dags/: hello_world.py  hello_world_go.py  nist_cve.py  scanner.py
sample-data/: nist_cve_full.json
schemas/: nist_cve.json
